data/derived/comb/progs/unify/prog2904.ml.out
Characters 13-17:
  let sample = VarX + VarY;;
               ^^^^
Error: This expression has type expr but an expression was expected of type
         int
